--- a/multiplayer/package.json
+++ b/multiplayer/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "dependencies": {
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   }
 }
