--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -19,7 +19,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: install dependencies
       working-directory: ./multiplayer
-    - run: npm test
+      run: npm ci
+    - name: test
       working-directory: ./multiplayer
+      run: npm test
