--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ main ]
     
+defaults:
+  run:
+    working-directory: multiplayer
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,8 +24,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: install dependencies
-      working-directory: ./multiplayer
       run: npm ci
     - name: test
-      working-directory: ./multiplayer
       run: npm test
