--- a/multiplayer/package.json
+++ b/multiplayer/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sinon": "^13.0.2"
   }
 }
